# mmwave-radar-tutorial

./: .clangd  .gitignore  .luarc.json  DataCaptureIWR.lua  LuaAPI.txt  Makefile  README-EN.md  README.md  adc  adc.cc  arena.hpp  capture.py  clustering.py  compile_commands.json  config.hpp  config.py  configuration.py  dsp.py  ekf.py  frame.hpp  frame_reader.ccm  main.c  main.cc  main.py  mmwave.c  mmwave.h  point_cloud_process.py  pointcloud_gen.py  process.py  pyproject.toml  ra-view.py  rd-view.py  skeleton.py  test.cc  test.out  tracking.py  utils.py  view.py  visualize.py  visualizer.py  (+1 more)
.cache/clangd/index/: adc.cc.552FF1BC4EDE1303.idx  config.hpp.58FB38726E6845B1.idx  main.cc.1BB425A5B814014A.idx
cmini/: .clangd  .gitignore  Makefile  README.md  arena.h  arena_test.c  main.c  pointer.h  pointer_test.c  result.h  result_test.c  strview.h  strview_test.c  utest.h  utest_test.c
gtrack/: gtrack.h  gtrack_associate.c  gtrack_cluster.c  gtrack_predict.c  gtrack_preprocess.c  gtrack_processFrame.c  gtrack_test.c  gtrack_update.c
samples/: demo.cc  xmake.lua
src/: xmake.lua
src/mmwave/common/: error.ccm
src/mmwave/radar/: adc_proc.ccm  fft.ccm  frame_proc.ccm  types.ccm
tutorial/ch0/: README.md  main.c
tutorial/ch1/: main.c
