[project]
name = "6843"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.92",
    "openradar>=1.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
]
