[project]
name = "mmwave-radar-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filterpy>=1.4.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "openradar>=1.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "smplx>=0.1.28",
    "trimesh>=4.11.5",
]
